--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,20 +1,28 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
-  background-color: #f6f6f6;
-  font-size: 18px;
+  margin: 100px 0;
+  background-color: #ada5a57c;
+  font-size: 16px;
   color: #4e4e4e;
 }
 
-div.container {
-  /*max-width: 1300px;*/
-  max-width: 620px;
+div.cv_wrap {
+  width: 21cm;
+  height: 29.7cm;
+  padding: 30px;
   margin: 0 auto;
-  padding: 100px 0;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
 }
-
 div.cv_wrap div.cv_title {
   margin-bottom: 50px;
   padding: 0 50px;
-  text-align: left ; /*EDIT*/
+  text-align: center;
 }
 div.cv_wrap div.cv_title h1 {
   margin-bottom: 20px;
@@ -34,35 +42,31 @@ div.cv_wrap div.cv_contact {
   margin-bottom: 40px;
 }
 div.cv_wrap div.cv_contact ul {
-/*  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;*/
-display: -webkit-box;
-display: -moz-box;
-display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
-flex-direction: column; /*ADD*/
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 div.cv_wrap div.cv_contact ul li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center; 
-          align-items: center; 
-  -webkit-box-pack: flex-start; /*EDIT*/
-      -ms-flex-pack: start; /*EDIT*/
-          justify-content: flex-start; /*EDIT*/
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   color: #6c6c6f;
-  padding: 10px 0;
+  padding: 10px 50px;
   background-color: #efeef1;
   text-decoration: none;
   font-size: 18px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
-  padding-left: 50px; /*ADD*/
 }
 div.cv_wrap div.cv_contact ul li a:hover {
   background-color: #282828;
@@ -71,16 +75,15 @@ div.cv_wrap div.cv_contact ul li a:hover {
 div.cv_wrap div.cv_contact ul li a i {
   margin-right: 10px;
 }
-/*div.cv_wrap div.cv_contact ul li:nth-of-type(2) a {
+div.cv_wrap div.cv_contact ul li:nth-of-type(2) a {
   border-right: 1px solid #e1e1e1;
   border-left: 1px solid #e1e1e1;
-}*/
+}
 div.cv_wrap div.cv_content {
-  padding: 0 50px;
   display: -ms-grid;
   display: grid;
-  grid-gap: 100px;
-  -ms-grid-columns: 1fr 100px 1fr;
+  grid-gap: 50px;
+  -ms-grid-columns: 1fr 50px 1fr;
   grid-template-columns: 1fr 1fr;
 }
 div.cv_wrap div.cv_content div.content_item {
@@ -89,8 +92,8 @@ div.cv_wrap div.cv_content div.content_item {
 div.cv_wrap div.cv_content div.content_item div.content_title {
   display: inline-block;
   letter-spacing: 4px;
-  font-size: 40px;
-  margin-bottom: 20px;
+  font-size: 30px;
+  margin-bottom: 15px;
   color: #282828;
   padding-bottom: 10px;
   position: relative;
@@ -106,11 +109,11 @@ div.cv_wrap div.cv_content div.content_item div.content_title:after {
   background-color: #282828;
 }
 div.cv_wrap div.cv_content div.content_item div.content_text {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_title {
   margin-bottom: 10px;
-  font-size: 28px;
+  font-size: 22px;
   letter-spacing: 4px;
   font-weight: 600;
 }
@@ -119,7 +122,7 @@ div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_su
   color: #bfbec1;
 }
 div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_text {
-  line-height: 30px;
+  line-height: 23px;
 }
 div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_text ul.skills {
   display: -ms-grid;
