--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -19,21 +19,21 @@ div.cv_wrap {
   -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
 }
-div.cv_wrap div.cv_title {
+div.cv_wrap header {
   margin-bottom: 50px;
   padding: 0 50px;
   text-align: center;
 }
-div.cv_wrap div.cv_title h1 {
+div.cv_wrap header h1 {
   margin-bottom: 20px;
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 5px;
 }
-div.cv_wrap div.cv_title h1 span {
+div.cv_wrap header h1 span {
   font-weight: 700;
 }
-div.cv_wrap div.cv_title div.profi_title {
+div.cv_wrap header .profi_title {
   color: #5e5d60;
   font-style: italic;
   font-size: 18px;
@@ -42,13 +42,10 @@ div.cv_wrap div.cv_contact {
   margin-bottom: 40px;
 }
 div.cv_wrap div.cv_contact ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 div.cv_wrap div.cv_contact ul li a {
   display: -webkit-box;
@@ -61,7 +58,7 @@ div.cv_wrap div.cv_contact ul li a {
       -ms-flex-pack: start;
           justify-content: flex-start;
   color: #6c6c6f;
-  padding: 10px 50px;
+  padding: 10px 0 10px 20px;
   background-color: #efeef1;
   text-decoration: none;
   font-size: 18px;
@@ -79,17 +76,17 @@ div.cv_wrap div.cv_contact ul li:nth-of-type(2) a {
   border-right: 1px solid #e1e1e1;
   border-left: 1px solid #e1e1e1;
 }
-div.cv_wrap div.cv_content {
+div.cv_wrap .contents_section {
   display: -ms-grid;
   display: grid;
   grid-gap: 50px;
   -ms-grid-columns: 1fr 50px 1fr;
   grid-template-columns: 1fr 1fr;
 }
-div.cv_wrap div.cv_content div.content_item {
+div.cv_wrap .contents_section div.content_item {
   margin-bottom: 30px;
 }
-div.cv_wrap div.cv_content div.content_item div.content_title {
+div.cv_wrap .contents_section div.content_item .content_title {
   display: inline-block;
   letter-spacing: 4px;
   font-size: 30px;
@@ -98,7 +95,7 @@ div.cv_wrap div.cv_content div.content_item div.content_title {
   padding-bottom: 10px;
   position: relative;
 }
-div.cv_wrap div.cv_content div.content_item div.content_title:after {
+div.cv_wrap .contents_section div.content_item .content_title:after {
   content: "";
   display: block;
   position: absolute;
@@ -108,29 +105,33 @@ div.cv_wrap div.cv_content div.content_item div.content_title:after {
   height: 2px;
   background-color: #282828;
 }
-div.cv_wrap div.cv_content div.content_item div.content_text {
+div.cv_wrap .contents_section div.content_item div.content_text {
   margin-bottom: 15px;
 }
-div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_title {
+div.cv_wrap .contents_section div.content_item div.content_text .content_text_title {
   margin-bottom: 10px;
   font-size: 22px;
   letter-spacing: 4px;
   font-weight: 600;
 }
-div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_subtitle {
+div.cv_wrap .contents_section div.content_item div.content_text .content_text_subtitle {
   margin-bottom: 10px;
   color: #bfbec1;
 }
-div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_text {
+div.cv_wrap .contents_section div.content_item div.content_text .content_text_text {
   line-height: 23px;
 }
-div.cv_wrap div.cv_content div.content_item div.content_text div.content_text_text ul.skills {
+div.cv_wrap .contents_section div.content_item div.content_text .content_text_text ul.skills {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
   grid-template-columns: repeat(2, 1fr);
 }
-div.cv_wrap div.cv_content div.content_item div.content_text div.languages_items div.languages_item {
+div.cv_wrap .contents_section div.content_item div.content_text .content_text_text ul.text_list {
+  list-style: disc;
+  padding-left: 15px;
+}
+div.cv_wrap .contents_section div.content_item div.content_text div.languages_items div.languages_item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -140,7 +141,7 @@ div.cv_wrap div.cv_content div.content_item div.content_text div.languages_items
           flex-direction: column;
   margin-bottom: 15px;
 }
-div.cv_wrap div.cv_content div.content_item div.content_text div.languages_items div.languages_item span.title {
+div.cv_wrap .contents_section div.content_item div.content_text div.languages_items div.languages_item span.title {
   margin-bottom: 10px;
   color: #bfbec1;
 }
